@@ -5761,8 +5761,28 @@ OK (10 msec)</programlisting>
       <para>You can manage your sudo roles in LDAP if you have installed the
       sudo-ldap package or <ulink
       url="http://www.sudo.ws/sudo/readme_ldap.html">compiled sudo with LDAP
-      support</ulink>. To activate sudo management in LAM Pro edit your server
-      profile and add the type "Sudo roles".</para>
+      support</ulink>.</para>
+
+      <para>To activate sudo management in LAM Pro edit your server profile
+      and add the type "Sudo roles".</para>
+
+      <screenshot>
+        <mediaobject>
+          <imageobject>
+            <imagedata fileref="images/sudoRole1.png" />
+          </imageobject>
+        </mediaobject>
+      </screenshot>
+
+      <screenshot>
+        <mediaobject>
+          <imageobject>
+            <imagedata fileref="images/sudoRole2.png" />
+          </imageobject>
+        </mediaobject>
+      </screenshot>
+
+      <para>Now you can create sudo commands.</para>
 
       <screenshot>
         <mediaobject>
